<resources>
    <string name="app_name_superapi">Súper Seguros</string>
    <string name="cotizaTu_superapi">Cotiza tu</string>
    <string name="felicidades_superapi">¡Felicidades! </string>
    <string name="yaCuentasConTuSeguroDeAuto_superapi">Ya cuentas con tu seguro de auto</string>
    <string name="conTuNuevaPolizaDeSeguro_superapi">Con tu nueva póliza de seguro, puedes tener la tranquilidad de saber que tu auto está protegido, conducir sin preocupaciones.</string>
    <string name="tuPolizaSeraVigenteUnDiaDespuesDeTuContratacion_superapi">Tu póliza será vigente un día después de tu contratación. Enviaremos los datos de tu póliza a tu correo electrónico y teléfono proporcionado.</string>
    <string name="importante_superapi">Importante:</string>
    <string name="tuCuentaFuncionaParaSuperYMidoconline_superapi">Tu cuenta funciona para Súper y Midoconline.</string>
    <string name="superEnviamosTusDatos_superapi">¡Súper! Enviamos tus datos</string>
    <string name="tienesDudas_superapi">¿Tienes dudas?</string>
    <string name="contactanos_superapi"> Contáctanos</string>
    <string name="seguroDeAuto_superapi">Seguro de Auto</string>
    <string name="numeroDePoliza_superapi">Número de póliza</string>
    <string name="poliza_superapi">Póliza</string>
    <string name="numeroDeCotizacion_superapi">Número de cotización</string>
    <string name="fechaDeContracion_superapi">fecha de contratación:</string>
    <string name="DocumentosDeTuPoliza_superapi">Documentos de tu póliza</string>
    <string name="estosSonLosDatosMasImportantes_superapi">Estos son los datos más importantes. Si llegas a tener un siniestro, esta es la información que necesitaras.</string>
    <string name="tienesUnSiniestro_superapi">¿Tienes un siniestro?</string>
    <string name="telefono2_superapi">Teléfono: 800 472 7696</string>
    <string name="telefonoGS_superapi">800 472 7696</string>
    <string name="reciboDePago_superapi">Recibo de pago</string>
    <string name="polizaDeAuto_superapi">Póliza de auto</string>
    <string name="coberturaEnElExtranjero_superapi">Cobertura en el extranjero</string>
    <string name="condicionesGenerales_superapi">Condiciones generales</string>
    <string name="seguro_superapi">seguro</string>
    <string name="aqui_superapi">aquí</string>
    <string name="cargando_superapi">Cargando</string>
    <string name="cargandoGeneros_superapi">Cargando géneros</string>
    <string name="cargandoAseguradoras_superapi">Cargando aseguradoras</string>
    <string name="cargandoCoberturas_superapi">Cargando coberturas</string>
    <string name="laProteccionQue_superapi">La protección que tu auto y tú, se merecen.</string>
    <string name="conCoberturasQue_superapi">Con coberturas que se adaptan a ti, disfruta cada viaje con la tranquilidad de estar siempre protegido.</string>
    <string name="tuSeguroDesde_superapi">Tu seguro desde $184 mxn al mes</string>
    <string name="disfrutaCadaViaje_superapi">Disfruta cada viaje con un Súper respaldo.</string>
    <string name="cotizaTuSeguro_superapi">Cotiza tu seguro</string>
    <string name="estoEsLoQue_superapi">Esto es lo que cubre tu seguro de auto</string>
    <string name="queCubreElSeguro_superapi">¿Qué cubre el seguro?</string>
    <string name="coberturas_superapi">Coberturas</string>
    <string name="conoceADetalleLasCoberturas_superapi">Conoce a detalle las coberturas</string>
    <string name="auto_superapi">Auto</string>
    <string name="vacio_superapi"> </string>
    <string name="usuarioEncontrado_superapi">Usuario encontrado</string>
    <string name="usuarioNoEncontrado_superapi">Usuario no encontrado</string>
    <string name="costoTotal_superapi">Costo total</string>
    <string name="primerPago_superapi">Primer pago</string>
    <string name="pagoSubsecuente_superapi">Pago subsecuente</string>
    <string name="preciovacio_superapi">$0.00 MXN</string>
    <string name="siLoQuiero_superapi">Sí, lo quiero</string>
    <string name="estasAPocosPasosDeObtenerTuSeguro_apisuper">Estás a pocos pasos de obtener tu seguro</string>
    <string name="faltaPoco_superapi">Falta poco</string>
    <string name="ahoraQueSigue_superapi">¿Ahora qué sigue?</string>
    <string name="llenaLosDatosDelConductorAutoyCobertura_superapi">Llena los datos del conductor, auto y cobertura.</string>
    <string name="pagayAsiDeFacilTienesTuSeguroDeAuto_superapi">Paga y así de fácil tienes tu seguro de auto</string>
    <string name="leeAquiLosTerminosYCondicionesDelSeguro_superapi">Lee aquí los Términos y condiciones del seguro</string>
    <string name="continuar_superapi">Continuar</string>
    <string name="paraContratarTuSeguroNoPedimosDocumentosDePropiedad_superapi">Para contratar tu seguro, no pedimos documentos de propiedad, ni contrato de alquiler</string>
    <string name="datosSobreElVehiculo_superapi">Datos sobre el vehículo</string>
    <string name="matricula_superapi">Matrícula</string>
    <string name="ingresaTuPlaca_superapi">No. de placa (7 caracteres)</string>
    <string name="NDSDVehiculo_superapi">No. de serie (VIN) del vehículo</string>
    <string name="NDSCaracteres_superiapi">No. de serie (17 caracteres)</string>
    <string name="NumeroDeMotor_superapi">No. de motor</string>
    <string name="IngresaElNumeroDeTuMotor_superapi">No. de motor (20 caracteres)</string>
    <string name="TipoDeUsoDelVehiculo_superapi">Tipo de uso del vehículo</string>
    <string name="usoDelVehiculo_superapi">Uso del vehículo</string>
    <string name="conductor_superapi">Conductor</string>
    <string name="necesitamosLaInformacionDelConductor_superapi">Necesitamos la información del conductor</string>
    <string name="nombres_superapi">Nombre(s)</string>
    <string name="agregaUnNombre_superapi">Agrega un nombre</string>
    <string name="agregaUnApellidoPaterno_superapi">Agrega un apellido paterno</string>
    <string name="agregaUnApellidoMaterno_superapi">Agrega un apellido materno</string>
    <string name="agregaUnaFechaDeNacimiento_superapi">Agrega una fecha de nacimiento</string>
    <string name="agregaUnRFC_superapi">Agrega una RFC</string>
    <string name="tipoDeAuto_superapi">Tipo de auto</string>
    <string name="agregaUnaCalle_superapi">Agrega una calle</string>
    <string name="agregaUnNumeroExterior_superapi">Agrega un número exterior</string>
    <string name="agregaUnaColonia_superapi">Agrega una colonia</string>
    <string name="agregaUnEstado_superapi">Agrega un estado</string>
    <string name="agregaUnMunicipio_superapi">Agrega un municipio/delegación</string>
    <string name="agregaUnCodigoPostal_superapi">Agrega un Código postal</string>
    <string name="agregaUnCorreoElectrónico_superapi">Agrega un correo electrónico</string>
    <string name="agregaUnEstadoCivil_superapi">Agrega un estado civil</string>
    <string name="agregaUnGenero_superapi">Agrega un género</string>
    <string name="agregaUnNumeroDeTarjeta_superapi">Agrega un número de tarjeta</string>
    <string name="agregaUnMes_superapi">Agrega un mes</string>
    <string name="agregaUnAno_superapi">Agrega un año</string>
    <string name="agregaUnCodigoDeSeguridad_superapi">Agrega un código de seguridad</string>
    <string name="apellidoPaterno_superapi">Apellido paterno</string>
    <string name="apellidoPaternoSigno_superapi">Apellido paterno*</string>
    <string name="apellidoMaterno_superapi">Apellido materno</string>
    <string name="apellidoMaternoSigno_superapi">Apellido materno*</string>
    <string name="fechaDeNacimiento_superapi">Fecha de nacimiento</string>
    <string name="correoElectronico_superapi">Correo electrónico</string>
    <string name="correoElectronicosigno_superapi">Correo electrónico*</string>
    <string name="contrasena_superapi">Contraseña</string>
    <string name="contrasenasigno_superapi">Contraseña*</string>
    <string name="confirmarContrasena_superapi">Confirmar contraseña</string>
    <string name="confirmarContrasenasigno_superapi">Confirmar contraseña*</string>
    <string name="telefonosigno_superapi">Teléfono*</string>
    <string name="mas52_superapi">+52</string>
    <string name="heLedioYAceptoLos_superapi">He leído y acepto los</string>
    <string name="avisoDePrivacidad_superapi">Aviso de privacidad</string>
    <string name="crearCuenta_superapi">Crear cuenta</string>
    <string name="dma_superapi">DD/MM/AAAA</string>
    <string name="rfcsigno_superapi">RFC*</string>
    <string name="encontramosUnaCuenta_superapi">Encontramos una cuenta</string>
    <string name="ingresaTuContrasena_superapi">Ingresa tu Contraseña</string>
    <string name="vincular_superapi">Vincular</string>
    <string name="direccion_superapi">Dirección</string>
    <string name="direccinDelAsegurado_superapi">Dirección del asegurado</string>
    <string name="calle_superapi">Calle</string>
    <string name="ingresaCalle_superapi">Ingresa calle</string>
    <string name="numeroExterior_superapi">Número exterior</string>
    <string name="numeroInterior_superapi">Número interior</string>
    <string name="ingresaNumeroExterior_superapi">Ingresa exterior</string>
    <string name="ingresaNumeroInterior_superapi">Ingresa interior</string>
    <string name="colonia_superapi">Colonia</string>
    <string name="ingresaColonia_superapi">Ingresa colonia</string>
    <string name="estado_superapi">Estado</string>
    <string name="ingresaEstado_superapi">Ingresa estado</string>
    <string name="nunicipio_superapi">Municipio/Delegación</string>
    <string name="ingresaMunicipio_superapi">Ingresa Municipio/Delegación</string>
    <string name="ingresaCodigoPostal_superapi">Código postal</string>
    <string name="creaUnaCuenta_superapi">Crea una cuenta</string>
    <string name="asiVincularemosTuPoliza_superapi">Así vincularemos tu póliza a tu cuenta</string>
    <string name="nombressigno_superapi">Nombre (s)*</string>
    <string name="telefono_superapi">Teléfono</string>
    <string name="agregaUnaContrasena_superapi">Agrega una contraseña</string>
    <string name="laContrasenaDebeTenerAlMenos8Caracteres_superapi">La contraseña debe tener al menos 8 caracteres</string>
    <string name="lasContrasenasNoCoinciden_superapi">Las contraseñas no coinciden</string>
    <string name="agregaUnTelefono_superapi">Agrega un teléfono</string>
    <string name="aceptaElAvisoDePrivacidad_superapi">Acepta el aviso de privacidad</string>
    <string name="vinculaTuPoliza_superapi">Vincula tu póliza</string>
    <string name="accedeConTuCorrreoOSiTienes_superapi">Accede con tu correo o si tienes una cuenta en Midoconline ingrésala para vincularte.</string>
    <string name="pagoDeTuPoliza_superapi">Pago de tu póliza</string>
    <string name="estasAUnPasoDeObtenerTuSeguroPor_superapi">Estás a un paso de obtener tu seguro por:</string>
    <string name="realizaElPagoDeTuSeguroAseguraTuAuto_superapi">Realiza el pago de tu seguro. Asegura tu auto hoy y garantiza tu tranquilidad para mañana.</string>
    <string name="resumenDeCompra_superapi">Resumen de compra</string>
    <string name="coberturasPersonalizadas_superapi">Coberturas personalizadas</string>
    <string name="danosMaterialesPorPerdidaParcial_superapi">Daños materiales por pérdida parcial</string>
    <string name="danosMaterialesPorPerdidaTotal_superapi">Daños Materiales Pérdida Total</string>
    <string name="roboTotal_superapi">Robo total</string>
    <string name="responsabilidadCivilPorDanosATerceros_superapi">Responsabilidad Civil por Daños a Terceros (LUC)</string>
    <string name="responsabilidadCivilPorFallecimiento_superapi">Responsabilidad Civil por Fallecimiento</string>
    <string name="gastosMedicos_superapi">Gastos médicos</string>
    <string name="asistenciaJuridica_superapi">Asistencia Jurídica</string>
    <string name="asistenciaVialYEnViajesGS_superapi">Asistencia Vial y en Viajes</string>
    <string name="asistenciaEnEU_superapi">Asistencia en Estados Unidos</string>
</resources>