<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_superapi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue5_superapi"
        android:minHeight="?attr/actionBarSize"
        android:elevation="5dp"
        android:theme="?attr/actionBarTheme" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/purple1_superapi"
                android:text="@string/faltaPoco_superapi"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black1_superapi"
                android:text="@string/estasAPocosPasosDeObtenerTuSeguro_apisuper"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:src="@drawable/checkauto_superapi"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="17sp"
                android:gravity="center"
                android:textColor="@color/black1_superapi"
                android:text="@string/ahoraQueSigue_superapi"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_marginEnd="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/uno_superapi"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/black1_superapi"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/llenaLosDatosDelConductorAutoyCobertura_superapi"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_marginEnd="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dos_superapi"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/black1_superapi"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/pagayAsiDeFacilTienesTuSeguroDeAuto_superapi"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/txtTerminos_superapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:gravity="center"
                android:textColor="@color/purple1_superapi"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/leeAquiLosTerminosYCondicionesDelSeguro_superapi"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardContinuar_superapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/purple1_superapi"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:textColor="@color/white1_superapi"
                        android:text="@string/continuar_superapi"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:gravity="center"
                android:textColor="@color/black1_superapi"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/paraContratarTuSeguroNoPedimosDocumentosDePropiedad_superapi"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>