<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/blue5_superapi"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_superapi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue5_superapi"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:elevation="5dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_color_color_superapi"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/txt_texto_superapi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vacio_superapi"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="24sp"
                android:textColor="@color/purple1_superapi"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/txt_texto2_superapi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yaCuentasConTuSeguroDeAuto_superapi"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black1_superapi"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/felicidadesvida_superapi"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/txtNombre_superapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vacio_superapi"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="13sp"
                android:textColor="@color/black1_superapi"/>

            <TextView
                android:id="@+id/txt_texto3_superapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vacio_superapi"
                android:fontFamily="@font/poppins_regular"
                android:textSize="13sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black1_superapi"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/importante_superapi"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="13sp"
                android:textColor="@color/black1_superapi"/>

            <TextView
                android:id="@+id/txt_texto4_superapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vacio_superapi"
                android:fontFamily="@font/poppins_regular"
                android:textSize="13sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black1_superapi"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuCuentaFuncionaParaSuperYMidoconline_superapi"
                android:fontFamily="@font/poppins_regular"
                android:textSize="13sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black1_superapi"/>
            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:id="@+id/btnContinuarSuperApi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">
                <TextView
                    android:background="@color/purple1_superapi"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white1_superapi"
                    android:text="@string/superEnviamosTusDatos_superapi"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="17sp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tienesDudas_superapi"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                android:textColor="@color/black1_superapi"/>
            <TextView
                android:id="@+id/txtContactanos_superapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:gravity="center"
                android:text="@string/contactanos_superapi"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/purple1_superapi"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>